--- a/JeanCloud.html
+++ b/JeanCloud.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <META HTTP-EQUIV="Refresh" CONTENT="5; URL=file:///G:/Nuitdel'info/ndl-main/lesservice.html">
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="JeanCloud.css" /> 
     <title>My precious Jean cloud</title>
     <!-- Penser à add le menu-->
   </head>
   <body>
-        <div class="wrapper">
-                <div><img src="./img/GreatMontage.jpg" id="imgJCVD" alt="Jean cloud le 100"></div>
-                <div><img src="./img/GreatMontage.jpg" id="imgJCVD" alt="Jean cloud le 100"></div>
-                <div>T<img src="./img/GreatMontage.jpg" id="imgJCVD" alt="Jean cloud le 100"></div>
-                <div><img src="./img/GreatMontage.jpg" id="imgJCVD" alt="Jean cloud le 100"></div>
-                <div><img src="./img/GreatMontage.jpg" id="imgJCVD" alt="Jean cloud le 100"></div>
-                <div><img src="./img/GreatMontage.jpg" id="imgJCVD" alt="Jean cloud le 100"></div>
-                <div><img src="./img/GreatMontage.jpg" id="imgJCVD" alt="Jean cloud le 100"></div>
-                <div><img src="./img/GreatMontage.jpg" id="imgJCVD" alt="Jean cloud le 100"></div>
-             </div>
-        
+    <img src="./img/GreatMontage.jpg" alt="JCVD LE 100 DE LA VEINE" height="1000" width="1700">
   </body>
