--- a/acceuil.html
+++ b/acceuil.html
@@ -2,20 +2,20 @@
 <html>
     <head>
         <title>Accueil</title>
-        <!--<META HTTP-EQUIV="Refresh" CONTENT="6; URL=file:///G:/Nuitdel'info/acceuil.html">-->
-        <link rel="stylesheet" href="style.css" />
+        <meta charset="utf8" HTTP-EQUIV="Refresh" CONTENT="15; URL=file:///G:/Nuitdel'info/ndl-main/acceuil.html">
+        <link rel="stylesheet" href="./style.css" />
         <link rel="icon" type="image/png" href="./img/JeanCloud.ico"/>
        <!--<link rel="icon" href="./img/Linkloud.png" />--> 
-        <script type="text/javascript" src="accueil.js"></script>
+        <script type="text/javascript" src="acceuil.js"></script>
     </head>
 <header>
     <h1>Nuit de L'info Génération Miracle</h1>
         <ul id="nav">
             <li><a href="#">Accueil</a></li>
-            <li><a href="fbdizisbz">Matchmaking</a></li>
+            <li><a href="acceuil.html">Matchmaking</a></li>
             <li><a href="./lesservice.html">Services disponibles</a></li>
             <li><a href="./contact.html">Contact</a></li>
-            <li><a href="./inscription.html">Inscription</a></li>
+            <li><a href="./inscription.php">Inscription</a></li>
         </ul>
 </header>
 <body>
@@ -30,8 +30,8 @@
                     </div>
                 </div>
                 
-                <div class="postit">
-                    <div class ="Synopsis">
+                <div id="postit">
+                    <div id ="Synopsis" onclick="afficherNouveauPostit()">
                         <h3>Éléna 19 ans,</h3>
                         <p>Étudiante en Licence Biologie<p>
                         <p>Université Paris 6 Pierre et Marie Curie</p>
@@ -44,8 +44,8 @@
                         <img src="./img/img2.jpg" alt="Un étudiant souffrant de la précarité">
                     </div>
                 </div>
-                <div class="postit">
-                    <div class ="Synopsis">
+                <div id="postit">
+                    <div id ="Synopsis1" onclick="afficherNouveauPostit1()">
                         <h3>Antoine, 22 ans,</h3>
                         <p>Etudiant en 4ème année d'Ingénieur d'électronique<p>
                         <p>École Supérieure d’Informatique Électronique Automatique Paris-Laval</p>
@@ -78,9 +78,9 @@
                         <img src="./img/img3.jpg" alt="Un étudiant souffrant de la précarité">
                     </div>
                 </div>
-                <div class="postit">
-                    <div class ="Synopsis">
-                        <h3>Laura 25 ans,</h3>
+                <div id="postit">
+                    <div id ="Synopsis2" onclick="afficherNouveauPostit2()">
+                        <h3>Aurélie 25 ans,</h3>
                         <p>Etudiante en 1ère année d'infirmière</p>
                         <p>I.F.S.I de Valence</p>
                     </div>
@@ -88,6 +88,7 @@
             </div> 
         </div>
     </div>
+      <script type="text/javascript" src="acceuil.js"></script>
 
 
 </body>
